syntax = "proto3";

package book.v1;

option go_package = "book_service/proto/book/v1;bookv1";

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
}

message AddBookRequest {
  Book book = 1;
}

message AddBookResponse {
  string id = 1;
}

message GetBookRequest {
  string id = 1;
}

message GetBookResponse {
  Book book = 1;
}

message ListBooksRequest {}

message ListBooksResponse {
  repeated Book books = 1;
}

service BookService {
  rpc AddBook(AddBookRequest) returns (AddBookResponse) {}
  rpc GetBook(GetBookRequest) returns (GetBookResponse) {}
  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse) {}
}
